syntax = "proto3";

option java_package = "accessControl";
option java_multiple_files = true;
option java_outer_classname = "accessControlImpl";

package accessControl;

service accessControl {

	rpc login(LoginRequest) returns (LoginResponse){}
	rpc authorization (AuthorizationRequest) returns (stream AuthorizationResponse) {}
	rpc logout (LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest{
	string username = 1;
	string password = 2;
}

message LoginResponse{
	string responseMessage = 1;
	int32 responseCode = 2;
}

message AuthorizationRequest{
	string name = 1;
}

message AuthorizationResponse{
	string message = 1;
	int32 responseCode = 2;
}

message LogoutRequest{
	string username = 1;
}

message LogoutResponse{
	string responseMessage = 1;
	int32 responseCode = 2;
}

message Empty{}